Simp_Chinese update

--- a/localisation/simp_chinese/MD_autonomy_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_autonomy_l_simp_chinese.yml
@@ -34,3 +34,4 @@
  autonomy_autonomous_province: "塞尔维亚自治省"
  autonomy_autonomous_province1: "联邦主体"
  autonomy_republic_ukr: "联邦主体"
+ autonomy_cuban_confederation: "安的列斯联盟主体"
