--- a/localisation/simp_chinese/MD_custom_achievements_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_custom_achievements_l_simp_chinese.yml
@@ -113,8 +113,8 @@
  form_the_peruvian_bolivian_confederation_DESC: "作为秘鲁或玻利维亚成立秘鲁-玻利维亚联邦"
  form_canzuk_NAME: "成立CANZUK联盟"
  form_canzuk_DESC: "作为澳大利亚、加拿大、新西兰或英国成立CANZUK联盟"
- form_antillean_confederation_NAME: "成立安的列斯邦联"
- form_antillean_confederation_DESC: "作为多米尼加共和国、海地、波多黎各或古巴成立安的安的列斯邦联"
+ form_antillean_confederation_NAME: "成立安的列斯联盟"
+ form_antillean_confederation_DESC: "作为多米尼加共和国、海地、波多黎各或古巴成立安的列斯联盟"
  form_rio_de_la_plata_NAME: "成立拉普拉塔"
  form_rio_de_la_plata_DESC: "作为巴拉圭、玻利维亚、智利、乌拉圭或阿根廷成立拉普拉塔"
  form_north_sea_empire_NAME: "成立北海帝国"
