--- a/localisation/simp_chinese/MD_focus_ABK_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_ABK_l_simp_chinese.yml
@@ -233,7 +233,7 @@
  ABK_rus_officer: "俄罗斯军官学校"
  ABK_rus_officer_desc: "我们的军官将在俄罗斯军事大学学习"
  ABK_china_rszo: "购买中国多管火箭系统"
- ABK_china_rszo_desc: "WM-80 是中国的多管火箭系统。 由中国第123工厂开发。 它由中国对外贸易公司北方工业提供出口。 该系统已交付给孟加拉国、亚美尼亚、约旦和苏丹。"
+ ABK_china_rszo_desc: "WM-80是中国的多管火箭系统。 由中国国营123厂开发。 它由中国对外贸易公司北方工业提供出口。 该系统已交付给孟加拉国、亚美尼亚、约旦和苏丹。"
  ABK_weapon: "与中国的军火交易"
  ABK_weapon_desc: "中国同意免费向我们提供自动步枪"
  ABK_China_training: "与中国军队一起训练"
