--- a/localisation/simp_chinese/MD_focus_AFG_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_AFG_l_simp_chinese.yml
@@ -25,7 +25,7 @@
  AFG_going_offensive: "开始我们的进攻"
  AFG_going_offensive_desc: "我们已经坐视不管了太久，捍卫我们所剩无几。现在是我们开始与塔利班战斗并夺回曾经属于我们的东西的时候了。"
  AFG_getting_new_tech: "获得新技术"
- AFG_getting_new_tech_desc: "我们一直在打我们的战争，就像 20 世纪一样。我们需要投资新技术并使我们的军队现代化。我们正在与一个强大的敌人作战 - 是时候让我们的武器超过他们了。"
+ AFG_getting_new_tech_desc: "我们一直在打我们的战争，就像20世纪一样。我们需要投资新技术并使我们的军队现代化。我们正在与一个强大的敌人作战 - 是时候让我们的武器超过他们了。"
  AFG_planes: "开始我们的空军"
  AFG_planes_desc: "我们没有飞机可言，但如果我们主宰天空，我们就更容易击退塔利班。"
  AFG_USA_equipment: "CIA 参与"
@@ -101,7 +101,7 @@
  AFG_the_cities: "发展城市"
  AFG_the_cities_desc: "经过几十年的战争，我们的城市有很大的发展潜力，一些受损的建筑物实际上可以翻新并改造成工厂，以更好地满足市民的需求。"
  AFG_the_capital: "发展喀布尔"
- AFG_the_capital_desc: "在 20 世纪中叶，喀布尔是一个度假胜地，然而，几十年的战争使喀布尔遭受了巨大的破坏和各种设施的年久失修。重建和现代化喀布尔不仅将恢复其昔日的繁荣，也彰显了中央的权威。"
+ AFG_the_capital_desc: "在20世纪中叶，喀布尔是一个度假胜地，然而，几十年的战争使喀布尔遭受了巨大的破坏和各种设施的年久失修。重建和现代化喀布尔不仅将恢复其昔日的繁荣，也彰显了中央的权威。"
  AFG_getting_running_water: "获取自来水"
  AFG_getting_running_water_desc: "阿富汗目前是世界上最缺水的国家之一，我们的阿富汗同胞因无法获得清洁水而遭受了太多痛苦，现在是政府通过建设来解决水资源短缺问题的时候了适当的基础设施。"
  AFG_feed_the_nation: "养活国家"
@@ -161,7 +161,7 @@
  AFG_increased_mobilization: "增加征兵"
  AFG_increased_mobilization_desc: "我们的国家被强大的敌人包围，但我们的公民并不总是准备好战斗，我们需要实施征兵以确保我们的公民为战争做好准备。"
  AFG_eyes_on_pakistan: "宣称巴基斯坦普什图斯坦"
- AFG_eyes_on_pakistan_desc: "英国人在 20 世纪制定的杜兰德线是对我们国家的耻辱和侮辱，它使我们的大多数普什图同胞生活在巴基斯坦境内，我们认为这个国家不应该存在。我们将我们永远不会承认杜兰德线，我们也不会忘记巴基斯坦在历史上给我们人民造成的数十年苦难。"
+ AFG_eyes_on_pakistan_desc: "英国人在20世纪制定的杜兰德线是对我们国家的耻辱和侮辱，它使我们的大多数普什图同胞生活在巴基斯坦境内，我们认为这个国家不应该存在。我们将我们永远不会承认杜兰德线，我们也不会忘记巴基斯坦在历史上给我们人民造成的数十年苦难。"
  AFG_defending_our_borders: "保卫我们的边界"
  AFG_defending_our_borders_desc: "尽管我们的国家遵循严格的中立外交，但并非我们周围的每个国家都是稳定的，因此，我们不能自满。作为积极防御理论的一部分，我们需要在我们与巴基斯坦的边界上建立防御结构。 "
  AFG_leg_infantry: "改进我们的步兵"
@@ -306,7 +306,7 @@
  Afghanistan.13.d: "尽管我们的总统 [AFG.GetLeader] 访问 [CHI.GetNameWithFlag] 寻求安全援助，[CHI.GetLeader] 显然对任何类型的条约都闭口不谈。[CHI.GetLeader] 对我们的\"我们将始终致力于地区安全与稳定。"
  Afghanistan.13.a: "真是令人失望……"
  Afghanistan.14.t: "[AFG.GetNameDef]宣布对我们领土的主张"
- Afghanistan.14.d: "就在不久前，[AFG.GetNameWithFlag] 的总统 [AFG.GetLeader] 宣布 [AFG.GetNameWithFlag] 永远不会承认英国人在 20 世纪任意设立的杜兰德防线为两国边界，并大声声明:\"我们现在可能无法收回我们神圣的普什图土地，但我们的后代一定会收回这片土地，这片土地理应属于我们。时间会证明一切！\"很明显，[AFG.GetNameWithFlag] 现在正在变成对我们国家的敌对外交政策。"
+ Afghanistan.14.d: "就在不久前，[AFG.GetNameWithFlag]的总统[AFG.GetLeader]宣布[AFG.GetNameWithFlag]永远不会承认英国人在20世纪任意设立的杜兰德防线为两国边界，并大声声明:\"我们现在可能无法收回我们神圣的普什图土地，但我们的后代一定会收回这片土地，这片土地理应属于我们。时间会证明一切！\"很明显，[AFG.GetNameWithFlag]现在正在变成对我们国家的敌对外交政策。"
  Afghanistan.14.a: "他们绝对没有理由这样做！"
  Afghanistan.15.t: "暗杀布尔汉努丁·拉巴尼"
  Afghanistan.15.d: "今晚，Burhanuddin Rabbani 在他位于喀布尔的家中遭到自杀式炸弹袭击，今天也是他的 71 岁生日。两名冒充塔利班代表的男子走近他拥抱，其中一人被引爆他的炸药藏在头巾里。自杀式炸弹袭击者自称是塔利班指挥官，他说他从巴基斯坦的塔利班领导人那里得到了一个非常重要和积极的信息。他们说塔利班想与拉巴尼讨论和平问题。我们的其他四名成员政府的高级和平委员会也在爆炸中丧生。我们的消息来源证实，隐藏在巴基斯坦奎达的塔利班领导人奎达舒拉应对这次暗杀负责。\n\n拉巴尼离开后担任我国高级和平委员会主席政府内部的领导角色。期间，他成功说服数百名塔利班武装分子和平放下武器。暗杀是对和平人士的重大打击。因为很难找到像他这样有声望的人担任这个职位。"
@@ -322,7 +322,7 @@
  Afghanistan.18.d: "在持久自由行动之后，一些部落和少数民族民兵在赫拉特发起了反对塔利班的起义。在美国和伊朗的协助下，这些民兵控制了塔利班的几个地区并加入了\n\n起义遭到当地居民的庆祝枪声，一些庆祝活动甚至包括\"在屋顶跳舞\"和按汽车喇叭。Mohammad Ismail Khan，北方联盟的主要指挥官之一，也被称为\"赫拉特之狮\"赦免了前塔利班战士，但警告说，如果这些战士再次拿起武器，将会产生影响。"
  Afghanistan.18.a: "胜利近了！"
  AfghanistanNews.7.t: "[AFG.GetNameDef]宣布对巴基斯坦领土的主张"
- AfghanistanNews.7.d: "就在不久前，[AFG.GetNameWithFlag] 的总统 [AFG.GetLeader] 宣布 [AFG.GetNameWithFlag] 永远不会承认英国人在 20 世纪任意设立的杜兰德线为边界在两国之间，并大声表态:\"我们现在可能无法收回我们神圣的普什图土地，但我们的后代一定会收回这片土地，这片土地理应属于我们。时间会证明一切！\n\" [PAK.GetNameWithFlag] 的总统 [PAK.GetLeader] 回应拒绝了 [AFG.GetLeader] 的所有主张，并强烈批评这一行动，称\"[AFG] 的敌对外交行动.GetLeader]只会进一步损害我们两国的关系。\"并呼吁阿富汗政府尊重国际法。很明显，两国的外交关系进一步恶化。"
+ AfghanistanNews.7.d: "就在不久前，[AFG.GetNameWithFlag]的总统[AFG.GetLeader]宣布[AFG.GetNameWithFlag]永远不会承认英国人在 20 世纪任意设立的杜兰德线为边界在两国之间，并大声表态:\"我们现在可能无法收回我们神圣的普什图土地，但我们的后代一定会收回这片土地，这片土地理应属于我们。时间会证明一切！\n\" [PAK.GetNameWithFlag]的总统[PAK.GetLeader]回应拒绝了[AFG.GetLeader]的所有主张，并强烈批评这一行动，称\"[AFG.GetLeader]的敌对外交行动只会进一步损害我们两国的关系。\"并呼吁阿富汗政府尊重国际法。很明显，两国的外交关系进一步恶化。"
  AfghanistanNews.7.a: "让我们拭目以待。"
  AfghanistanNews.8.t: "阿富汗政变"
  AfghanistanNews.8.d: "由于中央政府的腐败、人民的经济匮乏和贫困，许多失去生计和被剥夺权利的阿富汗人加入了希克马蒂亚尔的£GFX_AFG_kingdom Hezb-e Islami。一个团体长期不领薪水的阿富汗军官发动政变，推翻共和政府，宣布暂停现行阿富汗宪法，暂时实施军事管制。 1990年代，正式结束流放，返回阿富汗担任阿富汗新总统。希克马蒂亚尔承诺铲除腐败，重振经济，带领阿富汗人民翻开新的篇章。针对政变，塔利班发言人发表声明称，\n \"我们是真正的阿富汗人，我们将继续消灭\"喀布尔屠夫\"赫克马蒂亚尔。"
@@ -334,17 +334,17 @@
  AfghanistanNews.10.d: "布哈努丁·拉巴尼今晚在喀布尔的家中遭到自杀式爆炸袭击。两名冒充塔利班代表的自杀式炸弹袭击者声称想与拉巴尼讨论和平问题，并与他拥抱，其中一人引爆了他的炸药阿富汗高级和平委员会的其他四名成员也在爆炸中丧生。\n\n拉巴尼在离开政府领导职位后担任阿富汗高级和平委员会主席。在此期间，他成功说服了数百人塔利班武装分子和平放下武器。他的暗杀是对阿富汗和平进程的重大打击。"
  AfghanistanNews.10.a: "悲惨的消息"
  AfghanistanNews.11.t: "劫持阿丽亚娜航空公司 805 航班"
- AfghanistanNews.11.d: "由阿里和穆罕默德·萨菲兄弟领导的九名阿富汗男子在逃离塔利班政权时劫持了阿丽亚娜阿富汗航空公司的 805 航班，这是一架注册号为 YA-FAY 的波音 727 飞机，机上载有 180 名乘客和 7 名机组人员登机。805 航班是从喀布尔飞往马扎里沙里夫机场的国内航班。\n\n劫机者迫使机组人员在塔什干、阿克托比和莫斯科中途停留后飞往英国的伦敦斯坦斯特德机场。飞机被围困一直持续到2月10日。劫机者是否会被定罪尚不清楚，因为他们正在等待明年的审判。"
+ AfghanistanNews.11.d: "由阿里和穆罕默德·萨菲兄弟领导的九名阿富汗男子在逃离塔利班政权时劫持了阿丽亚娜阿富汗航空公司的805号航班，这是一架注册号为YA-FAY的波音727飞机，机上载有180名乘客和7名机组人员登机。805号航班是从喀布尔飞往马扎里沙里夫机场的国内航班。\n\n劫机者迫使机组人员在塔什干、阿克托比和莫斯科中途停留后飞往英国的伦敦斯坦斯特德机场。飞机被围困一直持续到2月10日。劫机者是否会被定罪尚不清楚，因为他们正在等待明年的审判。"
  AfghanistanNews.11.a: "我们应该用我们的一架米格拦截他们"
  AfghanistanNews.12.t: "劫持阿丽亚娜航空公司 805 航班"
- AfghanistanNews.12.d: "由阿里和穆罕默德·萨菲兄弟领导的九名阿富汗男子正在逃离塔利班政权，劫持了阿丽亚娜阿富汗航空公司的 805 航班，这是一架注册号为 YA-FAY 的波音 727 飞机，机上载有 180 名乘客和 7 名机组人员登机。805 航班是从喀布尔飞往马扎里沙里夫机场的国内航班。\n\n劫机者迫使机组人员在塔什干、阿克托比和莫斯科中途停留后飞往英国的伦敦斯坦斯特德机场。飞机被围困一直持续到2月10日。劫机者是否会被定罪尚不清楚，因为他们正在等待明年的审判。"
+ AfghanistanNews.12.d: "由阿里和穆罕默德·萨菲兄弟领导的九名阿富汗男子在逃离塔利班政权时劫持了阿丽亚娜阿富汗航空公司的805号航班，这是一架注册号为YA-FAY的波音727飞机，机上载有180名乘客和7名机组人员登机。805号航班是从喀布尔飞往马扎里沙里夫机场的国内航班。\n\n劫机者迫使机组人员在塔什干、阿克托比和莫斯科中途停留后飞往英国的伦敦斯坦斯特德机场。飞机被围困一直持续到2月10日。劫机者是否会被定罪尚不清楚，因为他们正在等待明年的审判。"
  AfghanistanNews.12.a: "有趣"
  AfghanistanNews.12.b: "一场悲剧"
  AfghanistanNews.13.t: "伊朗将难民送回阿富汗"
- AfghanistanNews.13.d: "在与难民署达成协议后，伊朗启动了一项遣返计划，将在未来三周内将 7,700 名阿富汗难民送回家园。"
+ AfghanistanNews.13.d: "在与难民署达成协议后，伊朗启动了一项遣返计划，将在未来三周内将7,700名阿富汗难民送回家园。"
  AfghanistanNews.13.a: "这场战争有结局了吗？"
  AfghanistanNews.14.t: "阿富汗战争让数千人挨饿"
- AfghanistanNews.14.d: "世界粮食计划署报告说，坎大哈省和扎布尔省的干旱情况令人绝望。库奇人失去了多达 80% 的牛，为收集雨水而建造的灌溉系统已经干涸。杏子和杏仁树已经枯萎，没有结果。骆驼正在死亡。自 2 月以来，世界粮食计划署一直在为该地区的 30,000 个家庭提供食物，并计划在 5 月再增加 10,000 个家庭。世界粮食计划署向阿富汗人提供额外的面粉作为奖励，如果他们留在他们的村庄。"
+ AfghanistanNews.14.d: "世界粮食计划署报告说，坎大哈省和扎布尔省的干旱情况令人绝望。库奇人失去了多达80%的牛，为收集雨水而建造的灌溉系统已经干涸。杏子和杏仁树已经枯萎，没有结果。骆驼正在死亡。自2月以来，世界粮食计划署一直在为该地区的30,000个家庭提供食物，并计划在5月再增加10,000个家庭。世界粮食计划署向阿富汗人提供额外的面粉作为奖励，如果他们留在他们的村庄。"
  AfghanistanNews.14.a: "阿富汗人民需要我们"
  AfghanistanInvestment.1.t: "[AFG.GetNameDef]邀请我们投资他们的项目"
  AfghanistanInvestment.1.desc: "最近从与塔利班的战争中恢复过来，[AFG.GetNameWithFlag] 政府正在邀请我们投资他们国家的一些项目。但是，是否投资取决于我们。如果我们选择投资，我们可以对他们的政府产生一些影响，如果阿富汗的恐怖威胁仍然很高，我们最好不要冒险。"
@@ -543,7 +543,7 @@
  trade_allies: "关闭盟友"
  helps_our_counter_insurgency: "有助于我们的反叛行动"
  GULBUDDIN_HEKMATYAR_DESC: "古尔布丁·赫克马蒂尔是阿富汗政治家和前圣战者领袖。他是“我的队伍抵达贾尔布丹”政党的创始人和领导人，在1979年穆罕默德·尤努斯·哈利斯与伊斯兰党分裂成立党后被称为伊斯拉米·哈利斯。他在1990年代曾两次担任总理。赫克马蒂亚尔在1970年代初以学生身份加入穆斯林青年组织，在那里他以被该组织大部分人拒绝的伊斯兰激进主义而闻名。\n\n他在巴基斯坦度过了一段时间在1979年苏阿战争开始时返回阿富汗之前，当时中央情报局开始通过巴基斯坦情报机构 ISI 资助他迅速发展的伊斯兰党组织，ISI 是阿富汗最大的圣战组织之一。他获得了更多的中央情报局在苏阿战争期间，获得的资金比任何其他圣战组织领导人都多。\n\n在1992年苏联支持的阿富汗总统穆罕默德·纳吉布拉下台后，赫克马蒂亚尔拒绝加入新的行动与其他军阀一起参与阿富汗内战，仅在喀布尔就导致约50,000名平民丧生。赫克马蒂亚尔被指控对该市的火箭袭击负有最大责任。与此同时，作为艾哈迈德·沙阿·马苏德领导的和平与权力分享努力的一部分，赫克马蒂亚尔于1993年至1994年和1996年至1997年再次担任阿富汗总理。"
- MOHAMMED_ZAHIR_SHAH_DESC: "查希尔在位40年，是自18世纪杜兰尼帝国建立以来阿富汗在位时间最长的统治者。他扩大了阿富汗与许多国家的外交关系，包括与冷战双方的外交关系。20世纪 50 年代，查希尔·沙阿开始推动国家现代化，最终制定了新宪法和君主立宪制。他表现出无党派立场，他的长期统治给国家带来了和平，但后来却失去了和平。\n\n1973年，查希尔·沙阿在意大利接受治疗时，他的政权被他的表弟、前总理穆罕默德·达乌德·汗发动政变推翻，建立了一个一党制共和国，结束了连续统治超过225年的君主制政府。 \n\n查希尔·沙阿是复兴君主制阿富汗并延长其家族对王位的继承权的最佳人选。"
+ MOHAMMED_ZAHIR_SHAH_DESC: "查希尔在位40年，是自18世纪杜兰尼帝国建立以来阿富汗在位时间最长的统治者。他扩大了阿富汗与许多国家的外交关系，包括与冷战双方的外交关系。20世纪50年代，查希尔·沙阿开始推动国家现代化，最终制定了新宪法和君主立宪制。他表现出无党派立场，他的长期统治给国家带来了和平，但后来却失去了和平。\n\n1973年，查希尔·沙阿在意大利接受治疗时，他的政权被他的表弟、前总理穆罕默德·达乌德·汗发动政变推翻，建立了一个一党制共和国，结束了连续统治超过225年的君主制政府。 \n\n查希尔·沙阿是复兴君主制阿富汗并延长其家族对王位的继承权的最佳人选。"
  AFG_AUTH_S_fascism: "阿富汗酋长国"
  AFG_AUTH_S_fascism_ADJ: "阿富汗"
  AFG_AUTH_S_fascism_DEF: "阿富汗酋长国"
