--- a/localisation/simp_chinese/MD_focus_ARM_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_ARM_l_simp_chinese.yml
@@ -263,7 +263,7 @@
  ARM_ZSFSR: "外高加索社会主义联邦苏维埃共和国"
  ARM_ZSFSR_desc: "统一思想是列宁根据内战后外高加索各共和国经济和军事政治统一、消灭反革命势力残余、恢复经济、消除武装分子的需要而提出的。种族间的不信任和敌意。今天，我们比以往任何时候都更必须团结在一起。"
  ARM_red_expance: "红色扩张"
- ARM_red_expance_desc: "亚美尼亚解放亚美尼亚秘密军是一个活跃于 1975 年至 1990 年代的马克思列宁主义激进组织，其既定目标是迫使土耳其政府公开承认其对1915年亚美尼亚种族灭绝的责任、支付赔偿并割让领土以建立亚美尼亚家园。亚美尼亚解放亚美尼亚秘密军本身和其他消息来源将其描述为游击队和武装组织。 我们应该遵循它的步骤。"
+ ARM_red_expance_desc: "亚美尼亚解放亚美尼亚秘密军是一个活跃于1975年至1990年代的马克思列宁主义激进组织，其既定目标是迫使土耳其政府公开承认其对1915年亚美尼亚种族灭绝的责任、支付赔偿并割让领土以建立亚美尼亚家园。亚美尼亚解放亚美尼亚秘密军本身和其他消息来源将其描述为游击队和武装组织。 我们应该遵循它的步骤。"
  ARM_marxism_win: "马克思主义的胜利"
  ARM_marxism_win_desc: "马克思主义的胜利已经完成。我国现在是整个地区共产主义议程的核心所在。"
  ARM_radical_pacifism: "激进和平主义"
@@ -368,7 +368,7 @@
  ARM_remove_competitors: "去除竞争对手"
  ARM_remove_competitors_desc: "加吉克·察鲁基扬需要摆脱其他寡头和竞争对手。有必要确保亚美尼亚市场的安全。"
  ARM_privatisation_2: "私有化"
- ARM_privatisation_2_desc: "我们只能除掉最烦人的竞争对手，然后按照 50/50 的比例将其余的竞争对手置于奴役和债务之中。"
+ ARM_privatisation_2_desc: "我们只能除掉最烦人的竞争对手，然后按照50/50的比例将其余的竞争对手置于奴役和债务之中。"
  ARM_fictiv_democratia: "炫耀民主"
  ARM_fictiv_democratia_desc: "我们应该贿赂欧盟委员会并创建一个虚构的民主制度。尽管这也许会引发另一场反对派的尖叫声……"
  ARM_grants_of_USA: "来自美国的资助"
@@ -545,7 +545,7 @@
  ARM_new_ways_mass_war: "新大规模战争选项"
  ARM_new_ways_mass_war_desc: "无论伪专家们所言多么变化多端，战争的大众作战学说还有其存在的理由。我们需要继续使用它。"
  ARM_buy_chine_RSZO: "购买中国制多管火箭发射系统"
- ARM_buy_chine_RSZO_desc: "WM-80 是中国的多管火箭系统。 由中国第123工厂开发。它由中国对外贸易公司北方工业提供出口。该系统已交付为孟加拉国、亚美尼亚、约旦和苏丹。"
+ ARM_buy_chine_RSZO_desc: "WM-80是中国的多管火箭系统。 由中国国营123厂开发。 它由中国对外贸易公司北方工业提供出口。 该系统已交付给孟加拉国、亚美尼亚、约旦和苏丹。"
  ARM_razrab_licenze: "未经许可的秘密开发"
  ARM_razrab_licenze_desc: "或许我们应该为我们的开发获取许可，以便用某种方式开发我们的军工复合体并尝试建立生产线"
  ARM_eshalone_defence: "保卫阶级"
@@ -655,11 +655,11 @@
  ARM_find_new_ZSU: "寻找新的自行高炮"
  ARM_find_new_ZSU_desc: "我们需要找到新的自行高炮来改善亚美尼亚的防空能力。我们有几种选择..."
  ARM_zsu23m: "ZSU-23M"
- ARM_zsu23m_desc: "ZSU-23-4石勒喀河是苏联自行高炮，1964年开始批量生产装备一门四联装23毫米自动炮。该装置的射速为每分钟 3400 发。它可以手动、半自动和自动瞄准目标。在自动和半自动模式下，使用常规雷达站。"
+ ARM_zsu23m_desc: "ZSU-23-4石勒喀河是苏联自行高炮，1964年开始批量生产装备一门四联装23毫米自动炮。该装置的射速为每分钟3400发。它可以手动、半自动和自动瞄准目标。在自动和半自动模式下，使用常规雷达站。"
  ARM_tunguska: "通古斯卡 M1"
  ARM_tunguska_desc: "2K22 通古斯卡是前苏联和现俄罗斯的履带式自行防空武器，配备地对空火炮和导弹系统。它的设计目的是为步兵和坦克团提供全天候保护，抵御低空飞行的飞机、直升机和巡航导弹。该武器系统使用的导弹的北约报告名称是SA-19“毵鼬”。"
  ARM_gepard: "猎豹式自行高射炮"
- ARM_gepard_desc: "“猎豹”是德国自行高射炮。设计用于直接掩护地面部队，摧毁倾斜距离为100 m至4 km、高度可达3 km的空中目标，飞行速度可达350-400 m / s，以及地面（表面）目标 距离可达 4500 米，有短暂停留和移动。"
+ ARM_gepard_desc: "“猎豹”是德国自行高射炮。设计用于直接掩护地面部队，摧毁倾斜距离为100m至4km、高度可达3 km的空中目标，飞行速度可达350-400m/s，以及地面（表面）目标 距离可达4500米，有短暂停留和移动。"
  ARM_indian_radars: "印度施瓦提雷达"
  ARM_indian_radars_desc: "武器定位雷达也称为施瓦提，是印度研制的移动火炮定位相控阵雷达。这种反炮兵雷达旨在探测和跟踪来袭的火炮和火箭弹，以确定反炮兵火力的原点。"
  ARM_exp_robots: "实验样品"
@@ -1931,7 +1931,7 @@
  ARM_peaceful_rise_of_reds: "共产党和平崛起"
  ARM_peaceful_rise_of_prowest: "亲西方势力和平崛起"
  ARM_peaceful_rise_of_neutral: "中立势力和平崛起"
- ARM_idea_eacu_cooperation: "欧亚关税同盟合作"
+ ARM_idea_eacu_cooperation: "与欧亚关税同盟合作"
  ARM_idea_eacu_cooperation_desc: "欧亚关税同盟(前身欧亚经济共同体)促进了大多数后苏联国家之间的经济联系。该联盟对所有进入该联盟的商品征收共同的对外关税，并作为一个单一实体在产生贸易协议和谈判时发挥作用。"
  ARM_idea_eacu_cooperation_2: "欧亚关税同盟一体化合作"
  ARM_idea_eacu_cooperation_2_desc: "欧亚关税同盟(前身欧亚经济共同体)促进了大多数后苏联国家之间的经济联系。该联盟对所有进入该联盟的商品征收共同的对外关税，并作为一个单一实体在产生贸易协议和谈判时发挥作用。"
