--- a/localisation/simp_chinese/MD_focus_CES_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CES_l_simp_chinese.yml
@@ -44,33 +44,33 @@
  UZB_karapalkstan.4.a: "支持卡拉卡尔帕克人"
  UZB_karapalkstan.4.b: "支持乌兹别克人"
  UZB_karapalkstan.4.c: "找到一个让双方都满意的解决方案"
- KAZ_high_emigration_5: "大量移民"
+ KAZ_high_emigration_5: "巨量移民"
  KAZ_high_emigration_5_desc: "随着苏联解体和经济形势的恶化，许多独联体国家深陷过度移民的泥潭。"
- KAZ_high_emigration_4: "极大量移民"
+ KAZ_high_emigration_4: "大量移民"
  KAZ_high_emigration_4_desc: "随着苏联解体和经济形势的恶化，许多独联体国家深陷过度移民的泥潭。"
- KAZ_high_emigration_3: "大量移民"
+ KAZ_high_emigration_3: "中等数量移民"
  KAZ_high_emigration_3_desc: "随着苏联解体和经济形势的恶化，许多独联体国家深陷过度移民的泥潭。"
  KAZ_high_emigration_2: "少量移民"
  KAZ_high_emigration_2_desc: "随着苏联解体和经济形势的恶化，许多独联体国家深陷过度移民的泥潭。"
  KAZ_high_emigration_1: "极少量移民"
  KAZ_high_emigration_1_desc: "随着苏联解体和经济形势的恶化，许多独联体国家深陷过度移民的泥潭。"
  KAZ_immigration: "积极移民"
- UZB_high_emigration_5: "大量移民"
+ UZB_high_emigration_5: "巨量移民"
  UZB_high_emigration_5_desc: "随着苏联解体和经济形势的恶化，许多独联体国家深陷过度移民的泥潭。"
- UZB_high_emigration_4: "极大量移民"
+ UZB_high_emigration_4: "大量移民"
  UZB_high_emigration_4_desc: "随着苏联解体和经济形势的恶化，许多独联体国家深陷过度移民的泥潭。"
- UZB_high_emigration_3: "大量移民"
+ UZB_high_emigration_3: "中等数量移民"
  UZB_high_emigration_3_desc: "随着苏联解体和经济形势的恶化，许多独联体国家深陷过度移民的泥潭。"
  UZB_high_emigration_2: "少量移民"
  UZB_high_emigration_2_desc: "随着苏联解体和经济形势的恶化，许多独联体国家深陷过度移民的泥潭。"
  UZB_high_emigration_1: "极少量移民"
  UZB_high_emigration_1_desc: "随着苏联解体和经济形势的恶化，许多独联体国家深陷过度移民的泥潭。"
  UZB_immigration: "积极移民"
- KYR_high_emigration_5: "大量移民"
+ KYR_high_emigration_5: "巨量移民"
  KYR_high_emigration_5_desc: "随着苏联解体和经济形势的恶化，许多独联体国家深陷过度移民的泥潭。"
- KYR_high_emigration_4: "极大量移民"
+ KYR_high_emigration_4: "大量移民"
  KYR_high_emigration_4_desc: "随着苏联解体和经济形势的恶化，许多独联体国家深陷过度移民的泥潭。"
- KYR_high_emigration_3: "大量移民"
+ KYR_high_emigration_3: "中等数量移民"
  KYR_high_emigration_3_desc: "随着苏联解体和经济形势的恶化，许多独联体国家深陷过度移民的泥潭。"
  KYR_high_emigration_2: "少量移民"
  KYR_high_emigration_2_desc: "随着苏联解体和经济形势的恶化，许多独联体国家深陷过度移民的泥潭。"
@@ -549,7 +549,7 @@
  TRK_berli_uniform_tt: "$TRK_berli_tt_intro$\n£temperature_hot_texticon 炎热适应度增长率：§G+10.0%§! \n£temperature_cold_texticon 寒冷适应度增长率：§G+10.0%§! \n\n"
  TRK_berli_discipline_tt: "$TRK_berli_tt_intro$\n£organization_texticon 部队组织度：§G+5.0%§! \n£manpower_texticon 适役人口：§G+7.0%§! \n\n"
  CES_agriculture_tt_intro: "§Y$CES_agriculture_policy$§!追加效果："
- CES_agriculture_111_tt: "添加§Y$CES_agriculture_policy$$§!，其效果为\n£construction_speed_texticon  建筑速度：§G+2.00%§!\n£traded_goods_texticon 可出口资源：§Y-4%§!\n£stability_texticon 稳定度：§R-5.00%§!\n£tax_gain_multiplier_modifier_texticon §Y税收收入§!乘数：§R-6.00%§!\n\n"
+ CES_agriculture_111_tt: "添加§Y$CES_agriculture_policy$§!，其效果为\n£construction_speed_texticon  建筑速度：§G+2.00%§!\n£traded_goods_texticon 可出口资源：§Y-4%§!\n£stability_texticon 稳定度：§R-5.00%§!\n£tax_gain_multiplier_modifier_texticon §Y税收收入§!乘数：§R-6.00%§!\n\n"
  CES_agriculture_112_tt: "$CES_agriculture_tt_intro$\n£construction_speed_texticon 建筑速度：§R-2.00%§!\n£social_cost_multiplier_modifier_texticon §Y社会支出开支§!乘数：§R+3.00%§!\n£stability_texticon 稳定度：§R-3.00%§!\n£tax_gain_multiplier_modifier_texticon §Y税收收入§!乘数：§G+3.00%§!\n£political_power_texticon 政治点数获取：§G+3%§!\n\n"
  CES_agriculture_113_tt: "$CES_agriculture_tt_intro$\n£construction_speed_texticon 建筑速度：§R+1.00%§!\n£social_cost_multiplier_modifier_texticon §Y社会开支花费§!乘数：§R-3.00%§!\n£stability_texticon 稳定度：§G+1.00%§!\n£tax_gain_multiplier_modifier_texticon §Y税收收入§!乘数：§R-3.00%§!\n\n"
  CES_agriculture_114_tt: "$CES_agriculture_tt_intro$\n£tax_gain_multiplier_modifier_texticon §Y税收收入§!乘数：§G+4.00%§!\n\n"
@@ -878,7 +878,7 @@
  centralkyr.6.a: "交出土地，解决抗议者！！！"
  centralkyr.6.b: "好吧，我们让步，我们不转让土地。"
  centralkyr.7.t: "阿赫昔事件"
- centralkyr.7.d: "阿赫昔事件——2002年3月17日，吉尔吉斯斯坦贾拉拉巴德地区阿赫昔区博斯皮克村当地居民举行示威，抗议将吉尔吉斯斯坦部分领土（9万公顷）移交给中国。"
+ centralkyr.7.d: "阿赫昔事件 - 2002年3月17日，吉尔吉斯斯坦贾拉拉巴德地区阿赫昔区博斯皮克村当地居民举行示威，抗议将吉尔吉斯斯坦部分领土（9万公顷）移交给中国。"
  centralkyr.7.a: "没有什么可以上街的！！！"
  centralkyr.8.t: "郁金香革命的开始"
  centralkyr.8.d: "今天是作为郁金香革命的开始而永远载入吉尔吉斯斯坦历史的一天。这一天发生了影响全国各个角落的大规模抗议和公民活动。\n\n总统阿卡耶夫批准引起民众不满的改革已经过去了几天。起初，没有人认为这些措施会将国家推向革命的门槛。然而，年轻人、学生和普通公民因渴望变革而团结起来，走上首都和其他城市的街头。\n\n阿拉多广场和比什凯克的街道上响起了要求民主、公平选举和言论自由的口号。数以千计的郁金香花成为和平和美好未来希望的象征。连续几天不间断的集会和抗议已经过去，这场感人的危机似乎已经成为一场伟大的革命。"
@@ -1267,7 +1267,7 @@
  elbasy: "礼服"
  yurtbashi: "总统"
  CES_idea_diplomatic_powerhouse: "外交实用主义"
- CES_idea_eacu_cooperation: "欧亚关税同盟合作"
+ CES_idea_eacu_cooperation: "与欧亚关税同盟合作"
  CES_idea_eacu_cooperation_desc: "欧亚关税同盟(前身欧亚经济共同体)促进了大多数后苏联国家之间的经济联系。该联盟对所有进入该联盟的商品征收共同的对外关税，并作为一个单一实体在产生贸易协议和谈判时发挥作用。"
  CES_idea_eacu_cooperation_2: "欧亚关税同盟一体化合作"
  CES_idea_eacu_cooperation_2_desc: "欧亚关税同盟(前身欧亚经济共同体)促进了大多数后苏联国家之间的经济联系。该联盟对所有进入该联盟的商品征收共同的对外关税，并作为一个单一实体在产生贸易协议和谈判时发挥作用。"
