--- a/localisation/simp_chinese/MD_focus_EGY_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_EGY_l_simp_chinese.yml
@@ -604,7 +604,7 @@
  EGY_arab_cable_desc: "怎么会有人怀疑阿拉伯电缆制造商协会生产的电缆的质量呢？这是最好的，我们将交付！"
  EGY_orascom: "欧瑞斯克姆建筑工业集团"
  EGY_orascom_desc: "欧瑞斯克姆建筑工业集团是一家全球领先的工程和建筑承包商，主要专注于中东、非洲和美国的基础设施、工业和高端商业项目。"
- EGY_idea_eacu_cooperation: "埃及-欧亚关税同盟合作"
+ EGY_idea_eacu_cooperation: "埃及-欧亚经济联盟合作"
  EGY_idea_eacu_cooperation_desc: "欧亚关税同盟（原欧亚经济共同体）促进了大多数后苏联国家之间的经济联系。联盟对进入联盟的所有商品征收共同的外部关税，并在达成贸易协议和谈判时充当单一实体。"
  EGY_morsi: "§G穆罕默德·穆尔西§!"
  EGY_morsi_desc: "穆尔西出生于沙恰省埃尔阿德瓦，先在开罗大学学习冶金工程，然后在南加州大学学习材料科学。1982年至1985年，他成为加州州立大学北岭分校的副教授，然后返回埃及在扎加齐格大学任教。穆尔西与当时在胡斯尼·穆巴拉克总统领导下被禁止任职的穆斯林兄弟会有联系，作为候选人参加2000年议会选举。"
@@ -1276,7 +1276,7 @@
  EGY_FRA_agree_to_sell_tt: "我们同意支付$8B以建造§Y1艘航母§!"
  LoAS_member_upd: "阿拉伯联盟成员"
  LoAS_member_upd_desc: "阿拉伯联盟，正式名称为阿拉伯国家联盟，是一个由阿拉伯国家组成的地区性组织。该组织的目的是加强成员国之间的关系，协调他们之间的合作。"
- EGY_MILLENNIUM_DAWN_DESC: "2000 年，埃及政治局势由总统穆巴拉克的铁腕统治所主宰，其特征是专制控制、政治自由受限和偶尔的改革试验。虽然经济有所增长，但国家仍然深陷贫困、腐败和社会不平等的困境。政府对异见者进行残酷镇压，但反对和变革的声音仍然存在，特别是在青年和社会团体中。然而，埃及政治的前景仍然充满不确定性，继承人、社会经济矛盾和先进技术的潜在作用都给国家的政治局势带来了变数。"
+ EGY_MILLENNIUM_DAWN_DESC: "2000年，埃及政治局势由总统穆巴拉克的铁腕统治所主宰，其特征是专制控制、政治自由受限和偶尔的改革试验。虽然经济有所增长，但国家仍然深陷贫困、腐败和社会不平等的困境。政府对异见者进行残酷镇压，但反对和变革的声音仍然存在，特别是在青年和社会团体中。然而，埃及政治的前景仍然充满不确定性，继承人、社会经济矛盾和先进技术的潜在作用都给国家的政治局势带来了变数。"
  EGY_nato_standards_military_idea: "北约标准"
  tur_syr_ben_tt: "§Y如果谈判成功，我们将获得政治利益。§!"
  copts_revolted: "科普特人起义了！"
