--- a/localisation/simp_chinese/MD_focus_SPR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SPR_l_simp_chinese.yml
@@ -1183,7 +1183,7 @@
  spain.84.d4: "支持独立的ETA部队今天被正式围捕，长枪党政府在维多利亚街头动用武器。敌对势力被镇压或严重削弱，因为关键成员被逮捕和处决。"
  spain.84.a: "维多利亚是西班牙的"
  spain.85.t: "重大油轮事故"
- spain.85.d: "在暴风雨中，载有77,000吨重油的油轮MV Prestige爆裂了一个油箱。该船随后在距离加利西亚海岸约210公里处沉没。据估计，它泄漏了67,000 m3重质燃料油。泄漏污染了西班牙，法国和葡萄牙海岸数千公里的海岸线和一千多个海滩，并对当地渔业造成了巨大损害。这次泄漏是西班牙历史上最大的环境灾难。"
+ spain.85.d: "在暴风雨中，载有77,000吨重油的MV声望号油轮的一个油箱爆裂了。该船随后在距离加利西亚海岸约210公里处沉没。据估计，它泄漏了67,000立方米重质燃料油。泄漏污染了西班牙，法国和葡萄牙海岸数千公里的海岸线和一千多个海滩，并对当地渔业造成了巨大损害。这次泄漏是西班牙历史上最大的环境灾难。"
  spain.85.a: "开始擦洗鸟类"
  spain.86.t: "向巴塞罗那进军"
  spain.86.d: "长枪党军队已经准备好向巴塞罗那进军。这是国家反佛朗特主义压力的最后堡垒。消灭这个抵抗分离主义的最后堡垒。"
