--- a/localisation/simp_chinese/MD_focus_TUR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_TUR_l_simp_chinese.yml
@@ -1909,7 +1909,7 @@
  TurkeyFocusEvents.39.a: "很好"
  TurkeyFocusEvents.40.t: "伊朗拒绝"
  TurkeyFocusEvents.40.d: "令人震惊的是，伊朗决定不帮助我们对抗以色列。这让我们的外交官非常困惑，因为几十年来伊朗一直呼吁以色列垮台……"
- TurkeyFocusEvents.40.a: "好。"
+ TurkeyFocusEvents.40.a: "好的"
  TurkeyFocusEvents.381.t: "伊朗正在与以色列作战"
  TurkeyFocusEvents.381.d: "伊朗正在战斗，以色列正在战斗，他们想利用我们的土地进行攻击，既然他们是我们的盟友，我们最好合作消除以色列的威胁。"
  TurkeyFocusEvents.381.a: "我们一直在等待这个.."
@@ -2053,7 +2053,7 @@
  Turkish_parties.1.a: "好。"
  Turkish_parties.2.t: "保守派政党获得支持"
  Turkish_parties.2.d: "看来我们人民的意识形态正变得越来越保守，因为保守党派开始获得比以前更多的追随者。因此，人们正在推动我国采取更加保守的政策。"
- Turkish_parties.2.a: "好。"
+ Turkish_parties.2.a: "好的"
  Turkish_parties.3.t: "左翼政党获得支持"
  Turkish_parties.3.d: "看来我们人民的意识形态越来越左，左翼政党开始比以前获得更多的追随者。因此，人们正在我国推动更多的社会主义政策。"
  Turkish_parties.3.a: "好。"
@@ -2062,7 +2062,7 @@
  Turkish_parties.4.a: "好。"
  Turkish_parties.9.t: "政治的根本转变"
  Turkish_parties.9.d: "我们国家的政府发生了巨大的、彻底的转变，导致了我们政治结构的彻底重组。"
- Turkish_parties.9.a: "好。"
+ Turkish_parties.9.a: "好的"
  Armenian_University.1.t: "亚美尼亚莫斯科国立大学发生爆炸"
  Armenian_University.1.d: "土耳其空袭炸毁了位于亚美尼亚的莫斯科政府大学"
  Armenian_University.1.a: "轰！"
