--- a/localisation/simp_chinese/MD_focus_USA_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_USA_l_simp_chinese.yml
@@ -2699,3 +2699,19 @@
  petro_dollar: "石油美元"
  petro_dollar_desc: "石油美元是用于购买原油的美元。自20世纪70年代中期石油价格产生大量贸易和经常账户盈余以来，美元一直是世界石油美元。这一地位巩固了美元在全球舞台上的主导地位，而且方便快捷。"
  wall_street_force_dynamic_modifier: "华尔街经济力量"
+ USA_blockade_america_category: "古巴封锁"
+ USA_limit_on_CUB: "限制公民前往古巴消费"
+ USA_limit_travel_CUB: "限制公民前往古巴旅行"
+ USA_support_cuban_opposition_travel_CUB: "支持古巴反对派"
+ USA_try_to_influence_on_canada: "加强我们对加拿大的影响力"
+ USA_new_sanctions_on_cuba: "通过针对古巴的新一揽子制裁措施"
+ USA_demand_canada: "要求加拿大加入封锁"
+ USA_try_to_influence_on_haiti: "影响海地的外交政策"
+ USA_start_revolution: "发动古巴革命"
+ USA_try_to_influence_on_dominicana: "影响多米尼加外交政策"
+ USA_demand_dominicana: "要求多米尼加共和国加入封锁"
+ USA_demand_haiti: "要求海地加入封锁"
+ USA_weak_cuba: "放松对古巴的制裁"
+ USA_cuba_non_terrorist: "将古巴从恐怖主义国家名单中删除"
+ USA_open_borders: "开放边界"
+ USA_end_blockade: "终止封锁"
