--- a/localisation/simp_chinese/MD_focus_VEN_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_VEN_l_simp_chinese.yml
@@ -889,7 +889,7 @@
  VEN_brain_drain_reversal: "人才流失逆转"
  VEN_FARC_active: "哥伦比亚革命武装力量活跃"
  VEN_outdated_army_idea: "过时的军队"
- VEN_outdated_army_idea_desc: "委内瑞拉军队陈旧、资金不足，急需改革。如果我们希望向国外发展，我们就需要改革我们过时的军队。"
+ VEN_outdated_army_idea_desc: "委内瑞拉军队过时、资金不足，急需改革。如果我们希望向国外发展，我们就需要改革我们过时的军队。"
  VEN_rejuvinated_army: "改革后的军队"
  VEN_better_generals: "更好的将领"
  VEN_cost_effectiveness: "成本效益"
