--- a/localisation/simp_chinese/MD_formable_nations_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_formable_nations_l_simp_chinese.yml
@@ -1,6 +1,6 @@
 ﻿l_simp_chinese:
  form_UAR_category: "团结阿拉伯人民"
- form_UAR_category_desc: "「六日战争」对泛阿拉伯主义造成了巨大打击，但现在是重振阿拉伯世界统一梦想的时候了。"
+ form_UAR_category_desc: "“六日战争”对泛阿拉伯主义造成了巨大打击，但现在是重振阿拉伯世界统一梦想的时候了。"
  UAR_integrate_LBA: "整合利比亚"
  UAR_integrate_LBA_desc: ""
  UAR_integrate_SYR: "整合叙利亚"
@@ -163,7 +163,7 @@
  SOU_integrate_Curacao_desc: ""
  SOU_update_flag: "$update_flag_and_name$"
  SOU_update_flag_desc: "$update_flag_and_name_desc$"
- is_SOU: "成立了南美国家联盟"
+ is_SOU: "已成立南美国家联盟"
  form_HBL_category: "比荷卢"
  form_HBL_category_desc: "比荷卢联盟是一个由荷兰、比利时和卢森堡组成的政治经济联盟。历史上，三个成员国之间有着友好和亲切的关系。当前的组织仅仅是在全球舞台上处理政治和经济问题的国家联盟。关于可能将这个国家联盟正式化为更具体的东西的秘密讨论。一个代表低地人民的新国家，为人民带来新的未来，并引导他们走向这个光明的未来。"
  HBL_integrate_start: "开始组建比荷卢联盟"
@@ -176,7 +176,7 @@
  HBL_integrate_LUX_desc: "卢森堡是三个国家中最小的一个。它保持着最大的人均国内生产总值，并有几个较小的旅游目的地。这个国家讲多种语言，最著名的是法语、德语和英语。考虑到卢森堡的规模，整合卢森堡并不是一项艰巨的任务，但它会带来一些官僚主义的挑战。"
  HBL_update_flag: "$update_flag_and_name$"
  HBL_update_flag_desc: "$update_flag_and_name_desc$"
- is_HBL: "成立了比荷卢联盟"
+ is_HBL: "已成立比荷卢联盟"
  form_USNA_category: "统一北美洲"
  form_USNA_category_desc: "自墨西哥、美国和加拿大作为民族国家成立以来，北美大陆历来排斥外国影响。它们构成了世界经济的支柱，在新千年之初的 GDP 总量达到 11 万亿。团结各国，放眼更广阔的明天，我们将走向未来。"
  USNA_integrate_start: "开始组建北美合众国"
@@ -189,10 +189,10 @@
  USNA_integrate_MEX_desc: "墨西哥是组成新州的三个国家中人口第二多的国家。它带来了一支庞大的军队。该国面临多项挑战，例如卡特尔的密度。尽管如此，整合墨西哥将成为新国家的主要焦点之一。"
  USNA_update_flag: "$update_flag_and_name$"
  USNA_update_flag_desc: "$update_flag_and_name_desc$"
- is_USNA: "成立了北美合众国"
+ is_USNA: "已成立北美合众国"
  form_UTS_category: "突厥民族联盟"
  form_UTS_category_desc: "突厥民族联盟是突厥语国家的联盟，包括乌兹别克斯坦、吉尔吉斯斯坦、哈萨克斯坦、土库曼斯坦。俄罗斯和中国还存在其他国家以外的突厥语族群，例如鞑靼人和维吾尔人。它们是我们联盟的目标，但不是最初的目标。我们将团结现有的民族国家，鼓励我们的人民回家或让他们加入亲人的怀抱。"
- UTS_integrate_start: "成立了突厥民族联盟"
+ UTS_integrate_start: "开始组建突厥民族联盟"
  UTS_integrate_start_desc: ""
  UTS_integrate_KAZ: "整合哈萨克斯坦"
  UTS_integrate_KAZ_desc: ""
@@ -208,9 +208,9 @@
  UTS_integrate_TUR_desc: ""
  UTS_update_flag: "$update_flag_and_name$"
  UTS_update_flag_desc: "$update_flag_and_name_desc$"
- is_UTS: "成立了突厥民族联盟"
+ is_UTS: "已成立突厥民族联盟"
  form_MAPHI_category: "马菲印尼联盟"
- form_MAPHI_category_desc: "1960 年代马来群岛的三个东南亚人拟议的非政治联盟。由于印度尼西亚和马来亚联邦之间的冲突，这个梦想从未实现。这三个国家的统一将创建一个可以与全球一些主要国家相媲美的国家。"
+ form_MAPHI_category_desc: "20世纪60年代有人曾提议了一个非政治性的东南亚三国联盟，位于马来群岛。但由于印度尼西亚和马来亚联邦之间的冲突，这个梦想从未实现。这三个国家的统一将创造一个可以与全球一些主要国家匹敌的国家。"
  MAPHI_integrate_start: "开始组建马菲印尼联盟"
  MAPHI_integrate_start_desc: "马菲印尼联盟的统一是我们各国人民新时代的开始。是时候团结起来，为我们的集体人民创造一个新的未来了。"
  MAPHI_integrate_IND: "整合印度尼西亚"
@@ -225,7 +225,7 @@
  MAPHI_integrate_BRU_desc: "文莱是该安排中的一个小国。这个国家虽然是小国，但也是必须整合的东西。"
  MAPHI_update_flag: "$update_flag_and_name$"
  MAPHI_update_flag_desc: "$update_flag_and_name_desc$"
- is_MAPHI: "成立了马菲印尼联盟"
+ is_MAPHI: "已成立马菲印尼联盟"
  form_INDOCHI_category: "印度支那"
  form_INDOCHI_category_desc: "印度支那是越南、柬埔寨和老挝的前联邦，一直存在到 1954 年。这三个国家共同构成了全球最大的经济体之一，并拥有大量人口。这是一个拥有茂密丛林、连绵起伏的丘陵、山脉和美丽海岸线的国家。它的力量在于人民和意志，这将使他的团队走向未来。"
  INDOCHI_integrate_start: "开始组建印度支那"
@@ -238,9 +238,9 @@
  INDOCHI_integrate_CBD_desc: "柬埔寨的自然地理和富饶的土地对国家来说很重要。将他们融入国家也将不断改善国家的现状。"
  INDOCHI_update_flag: "$update_flag_and_name$"
  INDOCHI_update_flag_desc: "$update_flag_and_name_desc$"
- is_INDOCHI: "成立了印度支那"
+ is_INDOCHI: "已成立印度支那"
  form_VISE_category: "维谢格拉德集团"
- form_VISE_category_desc: "维谢格拉德集团（也称为维谢格拉德四国、V4 或欧洲四方）是四个中欧国家的文化和政治联盟：捷克共和国、匈牙利、波兰和斯洛伐克。维谢格拉德集团的所有四个国家都是人类发展指数非常高的高收入国家。\n\n从 1500 年代开始，现代国家的大部分地区成为以维也纳为基地的哈布斯堡君主制的一部分或受其影响，直到第一次世界大战结束和哈布斯堡王朝统治的奥匈帝国解体。第二次世界大战后，这些国家成为苏联的卫星国，如波兰人民共和国、匈牙利人民共和国和捷克斯洛伐克社会主义共和国。1989年，随着柏林墙的倒塌和中东欧共产主义的倒台，使这三个国家拥抱了资本主义和民主。1991年12月，苏联解体，进一步让三个国家向西看。\n\n目前，这是一个联盟，但由于我们控制了维谢格拉德集团的整个领土，我们可以开始整合这些领土。"
+ form_VISE_category_desc: "维谢格拉德集团（也称为维谢格拉德四国、V4或欧洲四方）是四个中欧国家的文化和政治联盟：捷克共和国、匈牙利、波兰和斯洛伐克。维谢格拉德集团的所有四个国家都是人类发展指数非常高的高收入国家。\n\n从十六世纪开始，现代国家的大部分地区成为以维也纳为基地的哈布斯堡君主制的一部分或受其影响，直到第一次世界大战结束和哈布斯堡王朝统治的奥匈帝国解体。第二次世界大战后，这些国家成为苏联的卫星国，如波兰人民共和国、匈牙利人民共和国和捷克斯洛伐克社会主义共和国。1989年，随着柏林墙的倒塌和中东欧共产主义的倒台，使这三个国家拥抱了资本主义和民主。1991年12月，苏联解体，进一步让三个国家向西看。\n\n目前，这是一个联盟，但由于我们控制了维谢格拉德集团的整个领土，我们可以开始整合这些领土。"
  VISE_integrate_start: "开始组建维谢格拉德集团"
  VISE_integrate_start_desc: "是时候开始组建维谢格拉德联盟了。"
  VISE_integrate_POL: "整合波兰"
@@ -253,9 +253,9 @@
  VISE_integrate_HUN_desc: ""
  VISE_update_flag: "$update_flag_and_name$"
  VISE_update_flag_desc: "$update_flag_and_name_desc$"
- is_VISE: "成立维谢格拉德集团"
+ is_VISE: "已成立维谢格拉德集团"
  form_ANDES_category: "安第斯联邦"
- form_ANDES_category_desc: "安第斯联邦是 [COL.GetNameWithFlag]、[PRU.GetNameWithFlag] 和 [BOL.GetNameWithFlag] 国家之间提议的国家联盟。它松散地以安第斯共同体为基础，安第斯共同体是各国之间的自由贸易/经济联盟。拟议中的新国家总人口将超过一亿一千三百万，面积将达到四百七十万平方公里。它将是一个与墨西哥规模相类似的国家，其国内生产总值将达到四分之三万亿美元。"
+ form_ANDES_category_desc: "安第斯联邦是[COL.GetNameWithFlag]、[PRU.GetNameWithFlag]和[BOL.GetNameWithFlag]国家之间提议的国家联盟。它松散地以安第斯共同体为基础，安第斯共同体是各国之间的自由贸易/经济联盟。拟议中的新国家总人口将超过一亿一千三百万，面积将达到四百七十万平方公里。它将是一个与墨西哥规模相类似的国家，其国内生产总值将达到四分之三万亿美元。"
  ANDES_integrate_start: "开始整合安第斯联邦"
  ANDES_integrate_start_desc: ""
  ANDES_integrate_COL: "整合哥伦比亚"
@@ -266,9 +266,9 @@
  ANDES_integrate_BOL_desc: ""
  ANDES_update_flag: "$update_flag_and_name$"
  ANDES_update_flag_desc: "$update_flag_and_name_desc$"
- is_ANDES: "成立了安第斯联邦"
+ is_ANDES: "已成立安第斯联邦"
  form_ANTCONF_category: "安的列斯群岛联盟"
- form_ANTCONF_category_desc: "安的列斯群岛联盟是加勒比地区提议成立的国家，统一了[CUB.GetNameWithFlag]、[DOM.GetNameWithFlag]和[HAI.GetNameWithFlag]。它最初是波多黎各独立活动家拉蒙·埃梅特里奥·贝坦斯提出的一个想法，目的是将所有讲西班牙语的加勒比国家统一成一个统一的实体。最初的想法不包括 [HAI.GetNameWithFlag]，但是，该想法的支持者很快将其包括在内。随着[CUB.GetNameWithFlag] 和 [PTR.GetNameWithFlag]的殖民地被转移到美国，这个想法大多因美西战争而消失。这个想法将带来一个可能以圣多明各为首都，其官方语言为西班牙语的国家。"
+ form_ANTCONF_category_desc: "安的列斯联盟是加勒比地区提议成立的国家，统一了[CUB.GetNameWithFlag]、[DOM.GetNameWithFlag]和[HAI.GetNameWithFlag]。它最初是波多黎各独立活动家拉蒙·埃梅特里奥·贝坦斯提出的一个想法，目的是将所有讲西班牙语的加勒比国家统一成一个统一的实体。最初的想法不包括 [HAI.GetNameWithFlag]，但是，该想法的支持者很快将其包括在内。随着[CUB.GetNameWithFlag] 和 [PTR.GetNameWithFlag]的殖民地被转移到美国，这个想法大多因美西战争而消失。这个想法将带来一个可能以圣多明各为首都，其官方语言为西班牙语的国家。"
  ANTCONF_integrate_start: "开始组建安的列斯联邦"
  ANTCONF_integrate_start_desc: "现在是组建安的列斯群岛联盟的时候了。我们的人民现在必须团结起来，以确保加勒比人民拥有更光明的未来。"
  ANTCONF_integrate_CUB: "整合古巴"
