--- a/localisation/simp_chinese/MD_game_rules_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_game_rules_l_simp_chinese.yml
@@ -538,3 +538,18 @@
  RULE_ALLOW_PLAYER_COLORED_PUPPETS: "启用千禧黎明傀儡国色彩设定"
  RULE_OPTION_MD_COLORED_PUPPETS_YES_DESC: "当该选项已启用，任何成为傀儡的国家都会自动转变为其宗主国的颜色。 （例如，如果中国傀儡印度，那么印度就会像中国一样变成红色）。"
  RULE_OPTION_MD_COLORED_PUPPETS_NO_DESC: "当该选项已禁用，国家在被傀儡时不会改变其颜色，并且其颜色将保持不变。"
+ CUB_AI_BEHAVIOR: "@CUB 古巴"
+ RULE_CUB_Tesak: "德煞的力量"
+ RULE_CUB_Tesak_ALLOWED_DESC: "俄罗斯著名民族主义者“德煞”将在古巴上台"
+ RULE_CUB_Tesak_BLOCKED_DESC: "“德煞”不会在古巴上台。"
+ CUB_ai_behavior: "@CUB 古巴行为"
+ CUB_HISTORIC_DEFAULT: "史实路线"
+ CUB_HISTORIC_DEFAULT_DESC: "古巴将努力走史实路线。"
+ CUB_LIBERAL: "米格尔·马里奥·迪亚兹路线"
+ CUB_LIBERAL_DESC: "古巴将走选举米格尔·马里奥·迪亚兹的路线。"
+ CUB_COMMUNISM: "共产主义古巴"
+ CUB_COMMUNISM_DESC: "古巴将继续走共产主义路线。"
+ CUB_NATIONALIST: "民族主义古巴"
+ CUB_NATIONALIST_DESC: "民族主义长枪党在古巴掌权。"
+ CUB_DEMOCRATS: "民主古巴"
+ CUB_DEMOCRATS_DESC: "古巴将选择民主改革的路线。"
