--- a/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
@@ -2692,11 +2692,11 @@
  CSA.Nat_Autocracy: "£generic_Nat_Autocracy_small 邦联军"
  CSA.Nat_Autocracy_desc: ""
  CUB.conservatism: "£CUB_western_conservative 古巴基督教民主党"
- CUB.conservatism_desc: ""
+ CUB.conservatism_desc: "ghfhfvg"
  CUB.liberalism: "£CUB_western_liberal 古巴自由联盟"
  CUB.liberalism_desc: ""
  CUB.socialism: "£CUB_western_social_democrat 古巴民主社会革命党"
- CUB.socialism_desc: ""
+ CUB.socialism_desc: "古巴共产党内，除了卡斯特罗和切·格瓦拉思想的支持者外，还有同情该国亲西方路线的党员。 但他们的想法比较温和，不包括古巴制度和政策的协调变革。"
  CUB.Communist-State: "£CUB_emerging_communism 古巴共产党"
  CUB.Communist-State_desc: ""
  CUB.Nat_Autocracy: "£CUB_nationalist_military_junta 革命武装力量"
@@ -6084,16 +6084,16 @@
  SMA.Monarchist_icon: "£LIC_royal_crest"
  SOV.liberalism_alt: "£SOV_navalnyu 人民联盟"
  SOV.liberalism_alt_icon: "£SOV_navalnyu"
- SOV.liberalism_alt_desc: "自由主义 - 人民联盟是一个进步自由党，由俄罗斯著名政治人物阿列克谢·纳瓦尔尼创建。它代表反腐败、自由主义和市场经济。"
+ SOV.liberalism_alt_desc: "自由主义 - 人民联盟是一个进步自由党，由俄罗斯著名政治人物阿列克谢·纳瓦利内创建。它代表反腐败、自由主义和市场经济。"
  SOV.liberalism_alty: "£SOV_western_social_democrat33 进步党"
  SOV.liberalism_alty_icon: "£SOV_western_social_democrat33"
- SOV.liberalism_alty_desc: "自由主义 - 进步党是由俄罗斯著名政治人物阿列克谢·纳瓦尔尼创建的进步自由党。它代表反腐败、自由主义和市场经济。"
+ SOV.liberalism_alty_desc: "自由主义 - 进步党是由俄罗斯著名政治人物阿列克谢·纳瓦利内创建的进步自由党。它代表反腐败、自由主义和市场经济。"
  SOV.liberalism_altyn: "£SOV_future 俄罗斯未来党"
  SOV.liberalism_altyn_icon: "£SOV_future"
- SOV.liberalism_altyn_desc: "自由主义 - 俄罗斯未来党是由俄罗斯著名政治人物阿列克谢·纳瓦尔尼创建的进步自由党。它代表反腐败、自由主义和市场经济。"
+ SOV.liberalism_altyn_desc: "自由主义 - 俄罗斯未来党是由俄罗斯著名政治人物阿列克谢·纳瓦利内创建的进步自由党。它代表反腐败、自由主义和市场经济。"
  SOV.liberalism_nat: "£SOV_narod 群众"
  SOV.liberalism_nat_icon: "£SOV_narod"
- SOV.liberalism_nat_desc: "自由主义 - （民族民主党“群众”）是由俄罗斯著名政治人物阿列克谢·纳瓦尔尼创建的民族民主党。它代表反腐败、民族主义和民主。"
+ SOV.liberalism_nat_desc: "自由主义 - （民族民主党“群众”）是由俄罗斯著名政治人物阿列克谢·纳瓦利内创建的民族民主党。它代表反腐败、民族主义和民主。"
  SOV.Communist-State_alt: "£SOV_gorba 俄罗斯社会民主党"
  SOV.Communist-State_alt_icon: "£SOV_gorba"
  SOV.Communist-State_alt_desc: "俄罗斯社会民主党是由各个社会党派创建的广泛的社会党，是俄罗斯联邦共产党的继承者。它是民主社会主义者，支持改革和开放的政策。"
@@ -6133,7 +6133,7 @@
  HPR.Nat_Autocracy_desc: "军政府 - 哈尔科夫人民共和国共和民兵是哈尔科夫人民共和国的官方武装部队，为保卫哈尔科夫领土而创建。"
  CUB.Western_Autocracy: "£CUB_western_autocracy 古巴共产党 - §C亲西方派§!"
  CUB.Western_Autocracy_icon: "£CUB_western_autocracy"
- CUB.Western_Autocracy_desc: ""
+ CUB.Western_Autocracy_desc: "古巴共产党内，除了卡斯特罗和切·格瓦拉思想的支持者外，还有同情该国亲西方路线的党员。 但他们的想法比较温和，不包括古巴制度和政策的协调变革。"
  CUB.conservatism_icon: "£CUB_western_conservative"
  CUB.liberalism_icon: "£CUB_western_liberal"
  CUB.socialism_icon: "£CUB_western_social_democrat"
