EU GUI multi_lang

--- a/localisation/english/MD_focus_EU_l_english.yml
+++ b/localisation/english/MD_focus_EU_l_english.yml
@@ -20,6 +20,21 @@
  EU_no_urrent_mff_draft: "No Current MFF Draft"
  EU_no_ongoing_parliament_vote: "No Ongoing Parliament Vote"
  EU_no_active_budget_draft: "No Active Budget Draft"
+ EU_approve_ipa: "Approve IPA"
+ EU_euroscepticism_status: "[ROOT.GetFlag] Euroscepticism : [?ROOT.eurosceptic|§%R1]"
+ EU_europeanism_status: "[EUU.GetFlag] Europeanism: [?global.var_europeanism|§%G1]"
+ EU_supporting: "Supporting:"
+ EU_rejecting: "Rejecting:"
+ EU_support: "Support"
+ EU_reject: "Reject"
+ EU_current_active_measure: "Current Active Measure"
+ EU_country_rate_text: "[THIS.GetNameWithFlag] Rate"
+ EU_global_rate_text: "Global Rate"
+ EU_global_expenses_text: "Global Expenses"
+ EU_administration_expenses_text: "Administration Expenses"
+ EU_subsidies_text: "Subsidies"
+ EU_adjust_omt_text: "Adjust OMT"
+ EU_start_omt_text: "Start OMT"
 
  # Flags
  EU_potential: "[ROOT.GetNamewithFlag] is a Potential EU Member"
