--- a/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
@@ -542,7 +542,7 @@
  EU_apply_for_membership: "加入欧盟"
  EU_apply_for_membership_desc: "§Y[ROOT.GetNameWithFlag]§!可以加入§C[EUU.GetFlag]欧洲联盟§!，让我们合唱欢乐颂：\n欢乐女神 圣洁美丽\n灿烂光芒照大地\n我们心中充满热情\n来到你的圣殿里\n你的力量能使人们\n消除一切分歧\n在你光辉照耀下面\n四海之内皆成兄弟"
  EU_adopt_EU_law: "采纳欧盟法律"
- EU_adopt_EU_law_desc: "由于每一个候选国都必须通过大量的欧盟规则和条例，但谈判需要时间。在入世前的这段时间里，候选人在财政、行政和技术上都得到了支持。"
+ EU_adopt_EU_law_desc: "由于每一个候选国都必须通过大量的欧盟规则和条例，但谈判需要时间。在加入欧盟之前的这段时间里，候选国在财政、行政和技术上都得到了支持。"
  EU_join_the_Euro: "加入欧元区"
  EU_join_the_Euro_desc: "为了推广欧元制，欧盟国家必须使其国家立法符合相关的欧盟法律，并满足旨在确保经济趋同的具体条件。欧盟成员国1991年在马斯特里赫特商定的这些要求被称为趋同标准。"
  USoE_integrate_new_members: "整合新成员国"
@@ -2874,7 +2874,7 @@
  EU_parliament_mini_PG_Nat_Autocracy_loc_key: "[EU_parliament_PG_Nat_Autocracy_icon] 欧洲联盟军事参谋部：[?global.MEP_PG_Nat_Autocracy|C0]§C欧盟议会议员§!"
  EU_parliament_mini_PG_Monarchist_loc_key: "[EU_parliament_PG_Monarchist_icon] 君主主义者联盟：[?global.MEP_PG_Monarchist|C0]§C欧盟议会议员§!"
  office_occupied_tt: "职位目前未被其他欧盟成员国占据"
- rej_vote_tt: "§C欧盟§!人口%§R拒绝§!：[?global.var_EUpopRatioNo|%-]"
+ rej_vote_tt: "§C欧盟§!人口%§R否决§!：[?global.var_EUpopRatioNo|%-]"
  EU_parliament_is_in_session_tt: "欧洲议会目前正在审议一个议程项目"
  par_vote_wait: "等待下届议会会议开始。§Y还有[?delay_next_parliament_vote:days_left|0Y]天§!"
  con_vote_wait: "等待下一次理事会投票会议开始。§Y还有[?delay_player_next_council_vote:days_left|0Y]天§!"
@@ -3069,7 +3069,7 @@
  ongoing_potef_election: "没有正在进行的欧盟联邦主席选举"
  tooltip_EU_parliament_focus__approve: "我们目前没有有效的议程项目。如果欧洲议会可以开会，请将一个项目列入议程。"
  EU_total_member_vote_tt: "全部§C成员国§!要求：[?global.EU_active_vote_yes]/[?global.EU_majority_qmv_state]"
- EU_total_member_vote_desc_tt: "§C[EUU.GetNameWithFlag]§!主要投票系统是合格多数投票。合格多数投票需求[?global.EU_majority_qmv_state]§C成员国§!（或55%当前所有§C会员国§!）支持该决议。当我们拥有多于[?global.EU_majority_qmv_state]§C会员国§!支持这项法律就可以通过，此时假定我们拥有所需的65%人口多数。\n\n§C欧盟§!人口%§G支持§!：[?global.var_EUpopRatioYes|%+]\n§C欧盟§!人口%§R拒绝§!：[?global.var_EUpopRatioNo|%-]"
+ EU_total_member_vote_desc_tt: "§C[EUU.GetNameWithFlag]§!主要投票系统是合格多数投票。合格多数投票需求[?global.EU_majority_qmv_state]§C成员国§!（或55%当前所有§C会员国§!）支持该决议。当我们拥有多于[?global.EU_majority_qmv_state]§C会员国§!支持这项法律就可以通过，此时假定我们拥有所需的65%人口多数。\n\n§C欧盟§!人口%§G支持§!：[?global.var_EUpopRatioYes|%+]\n§C欧盟§!人口%§R否决§!：[?global.var_EUpopRatioNo|%-]"
  EU_sup_vote_tt: "§C欧盟§!人口%§G支持§!：[?global.var_EUpopRatioYes|%+]"
  EU_sup_vote_desc_tt: "§C[EUU.GetNameWithFlag]§!主要投票系统是合格多数投票。合格多数投票需求65%的§C[EUU.GetNameWithFlag]§!§Y人口§!支持该理事会决议。"
  EU_no_external_sov_chi_influence_15_tt: "[SOV.GetNameWithFlag]或者[CHI.GetNameWithFlag]当前对[THIS.GetNameWithFlag]的§Y影响力§!低于§R15%§!\n"
@@ -3081,3 +3081,18 @@
  EU_no_urrent_mff_draft: "无多年期财务框架草案"
  EU_no_ongoing_parliament_vote: "无正在进行的议会投票"
  EU_no_active_budget_draft: "无启动预算草案"
+ EU_approve_ipa: "加入前援助工具"
+ EU_supporting: "支持："
+ EU_rejecting: "否决："
+ EU_current_active_measure: "当前活动措施"
+ EU_global_rate_text: "全局利率"
+ EU_global_expenses_text: "全局费用"
+ EU_administration_expenses_text: "行政费用"
+ EU_subsidies_text: "补贴"
+ EU_adjust_omt_text: "调整直接货币交易"
+ EU_start_omt_text: "开始直接货币交易"
+ EU_euroscepticism_status: "[ROOT.GetFlag]欧洲怀疑主义：[?ROOT.eurosceptic|§%R1]"
+ EU_europeanism_status: "[EUU.GetFlag]欧洲主义：[?global.var_europeanism|§%G1]"
+ EU_support: "支持"
+ EU_reject: "否决"
+ EU_country_rate_text: "[THIS.GetNameWithFlag]利率"
