Revert "Deleted colored puppets"
This reverts commit e1f6c1af93efae46bd2fadd54f363d77cfcae1d8.

--- a/localisation/english/MD_game_rules_l_english.yml
+++ b/localisation/english/MD_game_rules_l_english.yml
@@ -576,6 +576,10 @@
  RULE_ALLOW_HELP_GUI_YES: "This enables the MD Help GUI."
  RULE_ALLOW_HELP_GUI_NO: "This disables the MD Help GUI."
 
+ RULE_ALLOW_PLAYER_COLORED_PUPPETS: "Enable MD Colored Puppets"
+ RULE_OPTION_MD_COLORED_PUPPETS_YES_DESC: "Since this game has been enabled, any country that becomes a puppet will automatically shift to the color that their overlord is. (For example, if China puppeted India, then India will become Red like China)."
+ RULE_OPTION_MD_COLORED_PUPPETS_NO_DESC: "Since this game rule has been disabled, countries will not change their color upon being puppeted, and their color will remain static."
+
  # CHEAT DECISIONS
  RULE_ALLOW_CHEAT_DECISIONS: "Allow Cheat Decisions"
  RULE_YES_ALLOW_CHEAT_DECISIONS_DESC: "Cheat Decisions Enabled"
