--- a/localisation/english/MD_autonomy_l_english.yml
+++ b/localisation/english/MD_autonomy_l_english.yml
@@ -4,6 +4,10 @@
  autonomy_satellite_state: "Satellite"
  autonomy_puppet_state: "Puppet"
  autonomy_autonomous_state: "Autonomous Region"
+ autonomy_associated_state_colored: "Associated State"
+ autonomy_satellite_state_colored: "Satellite"
+ autonomy_puppet_state_colored: "Puppet"
+ autonomy_autonomous_state_colored: "Autonomous Region"
  autonomy_terrorist_branch: "Branch"
  autonomy_terrorist_wilayah: "Wilayah"
  autonomy_terrorist_mintaqah: "Mintaqah"
