Fixed country names

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -2145,14 +2145,14 @@
  BAY_nationalist_DEF: "Bavaria"
  BAY_nationalist_ADJ: "Bavarian"
 
- ENG_fascism: "British Empire"
- ENG_fascism_DEF: "the British Empire"
+ ENG_fascism: "United Kingdom"
+ ENG_fascism_DEF: "the United Kingdom"
  ENG_democratic: "United Kingdom"
  ENG_democratic_DEF: "The United Kingdom"
- ENG_neutrality: "Great Britain"
- ENG_neutrality_DEF: "Great Britain"
- ENG_communism: "Union of Britain"
- ENG_communism_DEF: "the Union of Britain"
+ ENG_neutrality: "United Kingdom"
+ ENG_neutrality_DEF: "United Kingdom"
+ ENG_communism: "United Kingdom"
+ ENG_communism_DEF: "the United Kingdom"
  ENG_fascism_ADJ: "British"
  ENG_democratic_ADJ: "British"
  ENG_neutrality_ADJ: "British"
@@ -2161,14 +2161,14 @@
  ENG_nationalist_DEF: "The United Kingdom"
  ENG_nationalist_ADJ: "British"
 
- SOV_fascism: "Russian Empire"
- SOV_fascism_DEF: "the Russian Empire"
+ SOV_fascism: "Russia"
+ SOV_fascism_DEF: "Russia"
  SOV_democratic: "Russia"
  SOV_democratic_DEF: "Russia"
  SOV_neutrality: "Russia"
  SOV_neutrality_DEF: "Russia"
- SOV_communism: "Russian Federation"
- SOV_communism_DEF: "the Russian Federation"
+ SOV_communism: "Russia"
+ SOV_communism_DEF: "Russia"
  SOV_fascism_ADJ: "Russian"
  SOV_democratic_ADJ: "Russian"
  SOV_neutrality_ADJ: "Russian"
@@ -2177,15 +2177,15 @@
  SOV_nationalist_DEF: "Russia"
  SOV_nationalist_ADJ: "Russian"
 
- USA_fascism: "Free American Empire"
- USA_fascism_DEF: "the Free American Empire"
+ USA_fascism: "Islamic States"
+ USA_fascism_DEF: "the Islamic States"
  USA_democratic: "United States"
  USA_democratic_DEF: "The United States"
- USA_FreeStates_democratic: "Free States Of America"
+ USA_FreeStates_democratic: "United States"
  USA_neutrality: "United States"
  USA_neutrality_DEF: "The United States"
- USA_communism: "Communist States of America"
- USA_communism_DEF: "the Communist States of America"
+ USA_communism: "United States"
+ USA_communism_DEF: "the United States"
  USA_fascism_ADJ: "American"
  USA_democratic_ADJ: "American"
  USA_neutrality_ADJ: "American"
@@ -2322,14 +2322,14 @@
  SWE_nationalist_DEF: "Sweden"
  SWE_nationalist_ADJ: "Swedish"
 
- FRA_fascism: "Nation Française"
- FRA_fascism_DEF: "Nation Française"
+ FRA_fascism: "France"
+ FRA_fascism_DEF: "France"
  FRA_democratic: "France"
  FRA_democratic_DEF: "France"
- FRA_neutrality: "Bourbon France"
- FRA_neutrality_DEF: "Bourbon France"
- FRA_communism: "French Commune"
- FRA_communism_DEF: "the French Commune"
+ FRA_neutrality: "France"
+ FRA_neutrality_DEF: "France"
+ FRA_communism: "France"
+ FRA_communism_DEF: "France"
  FRA_fascism_ADJ: "French"
  FRA_democratic_ADJ: "French"
  FRA_neutrality_ADJ: "French"
