--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -2,6 +2,7 @@
 #Header
  hong_kong_focus: "Hong Kong Focus Tree"
 #Focuses
+ #the issue
  HKG_combat_vested_interests: "Combat Vested Interests"
  HKG_combat_vested_interests_desc: "The New Year has passed, everything is renewed. The advent of the milliennium has brought a new future for Hong Kong."
  HKG_take_on_heung_ye_kuk: "Take on the Heung Yee Kuk"
@@ -32,6 +33,7 @@
  HKG_crack_down_on_14K_triad_desc: ""
  HKG_crack_down_on_Luen_group_triad: "Crack Down on the Luen Group Triads"
  HKG_crack_down_on_Luen_group_triad_desc: ""
+ #politics
  HKG_divided_hong_kong: "A Divided Hong Kong"
  HKG_divided_hong_kong_desc: "The final years of Hong Kong's British rule left a legacy of pluralistic democracy. But it also led to endless disputes between the pro-establishment, pro-democracy and localist, and instead reduced administrative efficiency as a result. This makes people wonder whether this chaotic \"democracy\" is really as good as it is made out to be?"
  HKG_support_pro_beijing_camp: "Support the Pro-Beijing Camp"
@@ -58,16 +60,31 @@
  HKG_keep_to_one_country_two_systems_desc: "\"One country, two systems\" is running smoothly in Hong Kong. The Mainland and Hong Kong are getting what they want from it. Mainland uses Hong Kong as an important part of its \"Opening\" policy, while Hong Kong uses the promise of \"Fifty years no change\" to continue to maintain a liberalised life for the people of Hong Kong vis-à-vis the rest of the Chinese people. What is clear is that it is in our mutual interest to continue to maintain the operation of \"one country, two systems\"."
  HKG_hong_kong_post_2047_status: "Hong Kong's Post-2047 Status"
  HKG_hong_kong_post_2047_status_desc: "Despite Deng Xiaoping's promise to the people of Hong Kong that Hong Kong's political and economic system would remain unchanged for 50 years, but there is no telling what Hong Kong will be like after 2047. Perhaps it's time to consider the future of Hong Kong......"
+ #the decision of the future
  HKG_stick_to_CPC_line: "Stick to the CPC Line"
  HKG_stick_to_CPC_line_desc: ""
+ HKG_loyal_puppet: "The Loyal Puppet"
+ HKG_loyal_puppet_desc: ""
+ HKG_promote_patriotism: "Promote Patriotism"
+ HKG_promote_patriotism_desc: ""
+ HKG_patriots_governing: "Patriots Governing Hong Kong"
+ HKG_patriots_governing_desc: ""
+ HKG_suppress_cantonese_local_culture: "Suppress Cantonese Local Culture"
+ HKG_suppress_cantonese_local_culture_desc: ""
+ HKG_reduce_size_of_LegCo: "Reduce size of the LegCo"
+ HKG_reduce_size_of_LegCo_desc: ""
+ HKG_gong_zyu_ou_integration: "Hong Kong-Zhuhai-Macao Integration"
+ HKG_gong_zyu_ou_integration_desc: ""
  HKG_support_democracy_in_china: "Support Democracy in China"
  HKG_support_democracy_in_china_desc: ""
+
  HKG_inspire_chinese_grassroots_movements: "Inspire Chinese Grassroots Movements"
  HKG_inspire_chinese_grassroots_movements_desc: ""
  HKG_call_on_CPC_to_release_dissidents: "Call on the CPC to Release Dissidents"
  HKG_call_on_CPC_to_release_dissidents_desc: ""
  HKG_accountability_for_tiananmen: "Accountability for Tiananmen"
  HKG_accountability_for_tiananmen_desc: ""
+ 
  HKG_appease_localists: "Appease Localists"
  HKG_appease_localists_desc: ""
  HKG_stoke_anti_mainland_sentiment: "Stoke Anti-Mainland Sentiment"
@@ -94,6 +111,7 @@
  HKG_revise_basic_law_desc: ""
  HKG_pearl_of_east_asia: "The Pearl of East Asia"
  HKG_pearl_of_east_asia_desc: ""
+ #Economy
  HKG_under_lion_rock_hill: "Under the Lion Rock Hill"
  HKG_under_lion_rock_hill_desc: ""
  HKG_public_housing_problem: "Public Housing Problem"
@@ -229,6 +247,12 @@
  HKG_pay_off_informant: "Pay off the Informant"
  HKG_pay_off_informant_desc: "Although informants sometimes provide us with useful evidence of criminal activity, more often than not, these individuals only offer us useless information after they've been paid."
  HKG_arrest_peripheral_members_of_triad: "Arrest the peripheral members of the Triad"
+ HKG_crack_down_on_organized_vehicle_theft: "Crack down on Organized Vehicle Theft"
+ HKG_enhance_crackdown_on_illegal_gambling: "Enhance crackdown on Illegal Gambling"
+ HKG_intensify_efforts_to_combat_human_trafficking: "Intensify efforts to Combat Human Trafficking"
+ HKG_combat_underground_prostitution: "Combat Underground Prostitution"
+ HKG_arrest_leaders_of_triads: "Arrest the Leaders of the Triad"
+ HKG_Gong_ou_police_jointly_arrest_triad_members: "Gong‘ou Police Jointly Arrest Triad Members"
 
  #Ideas
  HKG_unrestricted_housing_market: "Unrestricted Housing Market"
