--- a/localisation/simp_chinese/MD_middle_east_content_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_middle_east_content_l_simp_chinese.yml
@@ -267,7 +267,7 @@
  conservatism_society_less_40_tt: "§Y社会保守主义 - 社会§!低于§Y40%§!"
  conservatism_society_more_30_tt: "§Y社会保守主义 - 社会§!高于§Y30%§!"
  conservatism_society_less_30_tt: "§Y社会保守主义 - 社会§!低于§Y30%§!"
- conservatism_society_less_20_tt: "§Y社会保守主义 - 社会§!高于§Y20%§!"
+ conservatism_society_less_20_tt: "§Y社会保守主义 - 社会§!低于§Y20%§!"
  conservatism_government_less_100_tt: "§G社会保守主义 - 政府§!低于§Y100%§!\n"
  conservatism_government_less_60_tt: "§G社会保守主义 - 政府§!低于§Y60%§!\n"
  conservatism_government_less_50_tt: "§G社会保守主义 - 政府§!低于§Y50%§!\n"
