--- a/localisation/simp_chinese/MD_new_traits_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_new_traits_l_simp_chinese.yml
@@ -80,8 +80,6 @@
  businessman_desc: "具有从商经验，并对经济学有扎实的理解。"
  lawyer: "背景：律师"
  lawyer_desc: "具有律师背景，对法律框架有深入的了解。"
- engineer: "背景：工程师"
- engineer_desc: "受过工程师教育，此人具有扎实的基础，可以理解复杂的管理系统。"
  scientist: "背景：科学家"
  scientist_desc: "受过科学家教育，此人具有扎实的基础，可以理解复杂的管理系统。"
  doctor: "背景：医生"
@@ -173,5 +171,7 @@
  agricultural_resource_economist: "农业资源经济学家"
  ecological_economist: "生态经济学家"
  scientist_engineer: "背景：科学家工程师"
- scientist_engineer_desc: "此人接受过科学家工程师的教育，为理解复杂的治理系统奠定了坚实的基础。"
+ scientist_engineer_desc: "受过科学家工程师教育，此人具有扎实的基础，可以理解复杂的管理系统。"
  dumbass_trait: "不懂经济学"
+ ex_engineer: "背景：工程师"
+ ex_engineer_desc: "受过工程师教育，此人具有扎实的基础，可以理解复杂的管理系统。"
