--- a/localisation/simp_chinese/MD_autonomy_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_autonomy_l_simp_chinese.yml
@@ -35,3 +35,7 @@
  autonomy_autonomous_province1: "联邦主体"
  autonomy_republic_ukr: "联邦主体"
  autonomy_cuban_confederation: "安的列斯联盟主体"
+ autonomy_associated_state_colored: "联系国"
+ autonomy_satellite_state_colored: "卫星国"
+ autonomy_puppet_state_colored: "傀儡国"
+ autonomy_autonomous_state_colored: "自治区"
